# leer

./: Cargo.toml  README.md  bag.csv  bag_template.json  board.csv  board_config.csv  board_template.csv  board_template.json  structure.md  test.json
scrabble/: Cargo.toml
scrabble/src/: generation.rs  lib.rs
scrabble_model/: Cargo.toml  structure.md
scrabble_model/src/: config.rs  error.rs  lib.rs
scrabble_model/src/config/: mod.rs  parse.rs
src/: main.rs
src/scrabble/: generate.rs  mod.rs
