[workspace]

members = [
    "scrabble_model",
]

[package]
name = "leer"
description = "scrabb(le) solv(er)"
authors = ["Yahya"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrabble_model={path = "./scrabble_model"}


# serde = { version = "1.0", features = ["derive"] }
# csv = "1.1"
