[package]
name = "leer"
description = "scrabb(le) solv(er)"
authors = ["Yahya"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.5"
derivative = "2.2.0"
indexmap = "1.9.3"
derive_more = "0.99.17"
